--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "antd": "^5.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
